# XMonopoly

./: .gitignore  .spacevim  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
Classes/Arena/: Arena.cpp  Arena.h  GlobalArena.cpp  GlobalArena.h
Classes/Arena/Factory/: ArenaFactory.cpp  ArenaFactory.h
Classes/Arena/Property/: Property.cpp  Property.h
Classes/Arena/SpecialArena/: SpecialArena.cpp  SpecialArena.h
Classes/Arena/SpecialArena/Airport/: Airport.cpp  Airport.h
Classes/Arena/SpecialArena/Factory/: Factory.cpp  Factory.h
Classes/Arena/SpecialArena/Hospital/: Hospital.cpp  Hospital.h
Classes/Arena/SpecialArena/Shop/: Shop.cpp  Shop.h
Classes/Arena/SpecialArena/Spawn/: Spawn.cpp  Spawn.h
Classes/Arena/SpecialArena/Tax/: Tax.cpp  Tax.h
Classes/Audio/: SoundManager.cpp  SoundManager.h
Classes/Champion/: Champion.cpp  Champion.h
Classes/Champion/Mage/: Mage.cpp  Mage.h
Classes/ChampionInGame/: ChampionInGame.cpp  ChampionInGame.h  Extension.h
Classes/ChampionInGame/AI/: BotChampion.cpp  BotChampion.h
Classes/ChampionInGame/UI/: ChampionHUD.cpp  ChampionHUD.h  ChampionUI.cpp  ChampionUI.h
Classes/ChampionSkill/: ChampionSkill.h
Classes/Dice/: Dice.cpp  Dice.h
Classes/GameEffect/: GameEffect.cpp  GameEffect.h
Classes/GameEffect/Debuff/: Debuff.cpp
Classes/GameMaster/: GameMaster.cpp  GameMaster.h
Classes/GameObject/: AGameObject.h  GameObject.cpp  GameObject.h  XProperties.cpp  XProperties.h
Classes/GameObject/.ccls-cache/D@@Cpp@Cocos@PrC@Classes@GameObject/: AGameObject.h.blob  GameObject.cpp  GameObject.cpp.blob  GameObject.h  GameObject.h.blob  XProperties.h  XProperties.h.blob
Classes/GameObject/Economy/: Economy.cpp  Economy.h
Classes/GameObject/Economy/Manager/: EconomyManager.cpp  EconomyManager.h
Classes/GameScene/: BattleScene.cpp  BattleScene.h  GameOver.cpp  GameOver.h  LoadingScene.cpp  LoadingScene.h  LoginScene.cpp  LoginScene.h  MainMenu.cpp  MainMenu.h  SceneTransition.cpp  SceneTransition.h
Classes/LogManager/: LogManager.cpp  LogManager.h
Classes/Map/: Map.cpp  Map.h
Classes/Player/: Player.cpp  Player.h
Classes/Player/Action/: PlayerAction.cpp  PlayerAction.h
Classes/Player/Brain/AI/: BotPlayer.cpp  BotPlayer.h
Classes/Player/UI/: PlayerUI.cpp  PlayerUI.h
Classes/Player/ViewPoint/: ViewPoint.cpp  ViewPoint.h
Classes/SelectHelper/: SelectHelper.cpp  SelectHelper.h
Classes/Skill/: Skill.cpp  Skill.h  SkillAll.h
Classes/Skill/Condition/: Condition.cpp  Condition.h
Classes/Skill/Mechanic/: Mechanic.cpp  Mechanic.h  MechanicManager.cpp  MechanicManager.h
Classes/Skill/SkillCard/: SkillCard.cpp  SkillCard.h
Classes/Skill/SkillInGame/: SkillInGame.cpp  SkillInGame.h
Classes/Skill/SkillInGame/MoveBy/: SkillMoveBy.cpp  SkillMoveBy.h
Classes/Skill/SkillManager/: SkillManager.cpp  SkillManager.h
Classes/Skill/SkillStatics/: SkillStatics.cpp  SkillStatics.h
Classes/Skill/SkillType/: SkillType.cpp  SkillType.h
Classes/Skill/TargetType/: TargetType.cpp  TargetType.h
Classes/Skill/TargetType/Factory/: TargetTypeFactory.cpp  TargetTypeFactory.h
Classes/Skill/TargetType/NoTarget/: NoTarget.cpp  NoTarget.h
Classes/Skill/TargetType/NoTarget/NormalCast/: NormalCast.cpp  NormalCast.h
Classes/Skill/TargetType/NoTarget/Toggle/: Toggle.cpp  Toggle.h
Classes/Skill/TargetType/Warp/: WarpType.cpp  WarpType.h
Classes/Statics/: Extension.cpp  Extension.h  Statics.cpp  Statics.h
Classes/Support/: Coordinate.cpp  Coordinate.h  Enum.h  GameConstant.h  Macros.h  ValidString.cpp  ValidString.h
Classes/User/: Helper.h  User.cpp  User.h
Classes/User/Audio/: Audio.cpp  Audio.h
Classes/User/Information/: UserInformation.cpp  UserInformation.h
Classes/User/UI/: IngameUI.cpp  IngameUI.h  UserUI.cpp  UserUI.h
Classes/ZyUwU/: ZyUwU.cpp  ZyUwU.h
Classes/ZyUwU/2d/: ZYAction.cpp  ZYAction.h  ZYEffect.cpp  ZYEffect.h  ZYLabel.cpp  ZYLabel.h  ZYShaderHelper.cpp  ZYShaderHelper.h  ZYSprite.cpp  ZYSprite.h  ZYSprite2.cpp  ZYSprite2.h  ZYSupport2D.cpp  ZYSupport2D.h
Classes/ZyUwU/base/: ZYConstant.h  ZYDirector.cpp  ZYDirector.h  ZYNodeExtend.cpp  ZYNodeExtend.h  ZYSupport.cpp  ZYSupport.h
Classes/ZyUwU/data-manager/: ZYDatabase.cpp  ZYDatabase.h
Classes/ZyUwU/gacha/: ZYGacha.cpp  ZYGacha.h
Classes/ZyUwU/math/: SmartAlgorithm.cpp  SmartAlgorithm.h  ZYFraction.cpp  ZYFraction.h
Classes/ZyUwU/platform/: CCMacrosSupport.h  ZYMacros.h
Classes/ZyUwU/platform/android/: ZYPlatformDefine-android.h
Classes/ZyUwU/ui/: YesOrNo.cpp  YesOrNo.h  ZYUI.cpp  ZYUI.h
Resources/: database.db
Resources/Shaders/: MotionBlur.fsh  MotionBlur.vsh  Null.fsh  Shadow.fsh  Shadow.vsh  SimpleGlow.fsh  Transparent.fsh  Water.fsh  Water.vsh  glow.fsh  wave.fsh  wave.vsh  xOutline.fsh
Resources/champion/ani/: duelist.json  duelist_attack.plist  duelist_idle.plist  samurai.json  samurai_attack.plist  samurai_idle.plist  zed.json  zed_attack.plist  zed_idle.plist
Resources/database/: database.db
Resources/hud/: Untitled.pdn
Resources/projectile/ani/: pr_exp_v1.plist
